syntax = "proto3";

option csharp_namespace = "AElf.Kernel.SmartContractExecution";

import "aelf/core.proto";

message TransactionResourceInfo {
    aelf.Hash transaction_id = 1;
    repeated int32 resources = 2;
    bool non_parallelizable =3 ;
}
